# rext-tui

./: .gitignore  AGENTS.md  CHANGELOG.md  CLIFF_CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEV_SERVER_PLAN.md  LICENSE  README.md  bootstrap.sh  rext-tui.code-workspace
.github/workflows/: rust.yml
config/: current_theme.toml  rext_tui.toml
hooks/: pre-commit
localization/: en.toml  fr.toml
src/: config.rs  error.rs  lib.rs  localization.rs  main.rs
tests/: integration_tests.rs
