[package]
name = "rext-tui"
version = "0.1.0"
edition = "2024"
description = "The Rext TUI for building Fullstack Web Apps"
keywords = ["TUI","development-tools"]
categories = ["development-tools"]
repository = "https://github.com/RextStack/rext-tui"
documentation = "https://docs.rs/rext-tui"
readme = "README.md"
license = "MIT"
homepage = "https://www.rextstack.org"
rust-version = "1.85.1"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
thiserror = "2.0.12"
